--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "binance_handler"]
-	path = binance_handler
+	path = submodules\binance_handler
 	url = https://github.com/mercyplaisir/binance_handler.git
